--- a/lesson_8/media/templates/lesson_9.html
+++ b/lesson_8/media/templates/lesson_9.html
@@ -65,7 +65,6 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 
     {% for post in posts %}
     <div class="w3-row-padding w3-margin-bottom">
-
           <div class="w3-quarter">
               <div class="w3-container {{ post.text }} w3-padding-16">
                   <div class="w3-left"><i class="fa fa-{{ post.text }} w3-xxxlarge"></i></div>
@@ -197,11 +196,12 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       </ul>
     </div>
     <hr>
+    <p>Resent Comments</p>
 
-    {%for mediauser in mediaesers%}
     <div class="w3-container">
       <h5>Recent Comments</h5>
-      <div class="w3-row">
+          <div class="w3-row">
+        {% for mediauser in mediausers %}
         <div class="w3-col m2 text-center">
           <img class="w3-circle" src="/mediafiles/{{mediauser.image}}" style="width:96px;height:96px">
         </div>
@@ -209,9 +209,10 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
           <h4>{{mediauser.last_name}}<span class="w3-opacity w3-medium">Sep 29, 2014, 9:12 PM</span></h4>
           <p>{{mediauser.first_name}}</p><br>
         </div>
+        {% endfor %}
       </div>
     </div>
-    {%endfor%}
+  
     <br>
     <div class="w3-container w3-dark-grey w3-padding-32">
       <div class="w3-row">
