--- a/lesson_8/media/templates/main.html
+++ b/lesson_8/media/templates/main.html
@@ -70,6 +70,8 @@ html, body, h1, h2, h3, h4, h5 {font-family: "Open Sans", sans-serif}
           <button onclick="myFunction('Demo1')" class="w3-button w3-block w3-theme-l1 w3-left-align"><i class="fa fa-circle-o-notch fa-fw w3-margin-right"></i> My Family</button>
         {% for post in posts %}
           <div id="Demo1" class="w3-hide w3-container">
+            
+            <a href="{% url post.owner %}"></a>
             <p>{{post.owner}}</p>
           </div>
         {% endfor %}
