--- a/lesson_8/media/static/css/uyga-vazifa.css
+++ b/lesson_8/media/static/css/uyga-vazifa.css
@@ -1,8 +1,10 @@
-
-body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
+.w3-black{
+    background-color: #000000;
+}
+h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 .w3-row-padding img {margin-bottom: 12px}
 /* Set the width of the sidebar to 120px */
-.w3-sidebar{width: 10px;background: #5f0000;}
+.w3-sidebar{width: 10px;background: #000000;}
 /* Add a left margin to the "page content" that matches the width of the sidebar (120px) */
 #main {margin-left: 120px}
 /* Remove margins from "page content" on small screens */
@@ -36,7 +38,8 @@ legend{color:inherit;display:table;max-width:100%;padding:0;white-space:normal}t
 ::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}
 /* End extract */
 html,body{font-family:Verdana,sans-serif;font-size:15px;line-height:1.5}html{overflow-x:hidden}
-h1{font-size:36px}
+h1{font-size:36px;color: #ffffff;
+}
 h2{font-size:30px}
 h3{font-size:24px}
 h4{font-size:20px}h5
@@ -189,9 +192,9 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 .w3-red,.w3-hover-red:hover{color:#fff!important;background-color:#f44336!important}
 .w3-sand,.w3-hover-sand:hover{color:#550909!important;background-color:#fdf5e6!important}
 .w3-teal,.w3-hover-teal:hover{color:#fff!important;background-color:#009688!important}
-.w3-yellow,.w3-hover-yellow:hover{color:#550909!important;background-color:#ffeb3b!important}
-.w3-white,.w3-hover-white:hover{color:#550909!important;background-color:#fff!important}
-.w3-black,.w3-hover-black:hover{color:#d9d9d9!important;background-color:#8c0303!important}
+.w3-yellow,.w3-hover-yellow:hover{color:#000000!important;background-color:#ffeb3b!important}
+.w3-white,.w3-hover-white:hover{color:#000000!important;background-color:#fff!important}
+.w3-black,.w3-hover-black:hover{color:#000000!important;background-color:#000000!important}
 .w3-grey,.w3-hover-grey:hover,.w3-gray,.w3-hover-gray:hover{color:#550909!important;background-color:#9e9e9e!important}
 .w3-light-grey,.w3-hover-light-grey:hover,.w3-light-gray,.w3-hover-light-gray:hover{color:#550909!important;background-color:#f1f1f1!important}
 .w3-dark-grey,.w3-hover-dark-grey:hover,.w3-dark-gray,.w3-hover-dark-gray:hover{color:#fff!important;background-color:#616161!important}
