--- a/imtihon_6_oy/misol/templates/math.html
+++ b/imtihon_6_oy/misol/templates/math.html
@@ -21,57 +21,14 @@
   <a href="#" class="w3-bar-item w3-button">Link 4</a>
 </nav>
 
-<style>th{
-    align-items: center;
-}</style>
-
-
-<body>
-    <table>
-            <th> Savol </th>
-            <th> A </th>
-            <th> B </th>
-            <th> C </th>
-    {% for post in tests%}
-        <tr>
-            <td> {{post.savol}} </td>
-            <td> {{post.a}} </td>
-            <td> {{post.b}} </td>
-            <td>{{post.c}}</td>
-            <td> 
-                <img style="width: 10%; height: auto;" src="/mediafiles/{{post.rasm}}">
-            </td>
-        </tr>
-    {% endfor %}
-    
-    </table>
-
-
-<!-- Marematika misollar uchun -->
-{% for math in maths %}
-<table>
-    <th> Savol </th>
-    <th> A </th>
-    <th> B </th>
-    <th> Natija </th>
-        <tr>
-        <td>{{math.birinchi_son}}</td>
-        <td>{{math.ikkinchi_son}}</td>
-        <td>{{math.natija}}</td>
-        </tr>
-</table>
-{%endfor%}
-
-
-
 <!-- Header -->
 <header class="w3-container w3-theme w3-padding" id="myHeader">
   <i onclick="w3_open()" class="fa fa-bars w3-xlarge w3-button w3-theme"></i> 
   <div class="w3-center">
-  <h4>BEAUTIFUL RESPONSIVE WEB SITES</h4>
-  <h1 class="w3-xxxlarge w3-animate-bottom">BUILT WITH W3.CSS</h1>
+  <h4>Matematika biz bilan juda oson</h4>
+  <h1 class="w3-xxxlarge w3-animate-bottom">Birgalikda test ishlaymiz</h1>
     <div class="w3-padding-32">
-      <button class="w3-btn w3-xlarge w3-dark-grey w3-hover-light-grey" onclick="document.getElementById('id01').style.display='block'" style="font-weight:900;">LEARN W3.CSS</button>
+      <button class="w3-btn w3-xlarge w3-dark-grey w3-hover-light-grey" onclick="document.getElementById('id01').style.display='block'" style="font-weight:900;">LEARN MATHE</button>
     </div>
   </div>
 </header>
@@ -82,12 +39,7 @@
       <header class="w3-container w3-theme-l1"> 
         <span onclick="document.getElementById('id01').style.display='none'"
         class="w3-button w3-display-topright">×</span>
-        <h4>Oh snap! We just showed you a modal..</h4>
-        <h5>Because we can <i class="fa fa-smile-o"></i></h5>
-      </header>
-      <div class="w3-padding">
-        <p>Cool huh? Ok, enough teasing around..</p>
-        <p>Go to our <a class="w3-btn" href="/w3css/default.asp">W3.CSS Tutorial</a> to learn more!</p>
+        <p>Qani boshladik <a class="w3-btn" href="/w3css/default.asp">Matematika</a>biz bilan juda oson </p>
       </div>
       <footer class="w3-container w3-theme-l1">
         <p>Modal footer</p>
@@ -95,40 +47,18 @@
     </div>
 </div>
 
-<div class="w3-row-padding w3-center w3-margin-top">
+{%for item in tests%}
 <div class="w3-third">
-  <div class="w3-card w3-container" style="min-height:460px">
-  <h3>Responsive</h3><br>
-  <i class="fa fa-desktop w3-margin-bottom w3-text-theme" style="font-size:120px"></i>
-  <p>Built-in responsiveness</p>
-  <p>Mobile first fluid grid</p>
-  <p>Fits any screen sizes</p>
-  <p>PC Tablet and Mobile</p>
+  <div class="w3-card w3-container" style="min-height:500px">
+  <h3> <a href="{% url 'test' %}"><b> TEST I </b></a></h3><br>
+  <i class="fa fa-css3 w3-margin-bottom w3-text-theme" style="font-size:120px"><img src="/mediafiles/{{item.rasm}}" alt="" style="width:50%;  "></i>
+  <p><b>{{item.savol}}</b></p>
+  <p>A. {{item.a}}</p>
+  <p>B. {{item.b}}</p>
+  <p>C .{{item.c}}</p>
   </div>
 </div>
-
-<div class="w3-third">
-  <div class="w3-card w3-container" style="min-height:460px">
-  <h3>Standard CSS</h3><br>
-  <i class="fa fa-css3 w3-margin-bottom w3-text-theme" style="font-size:120px"></i>
-  <p>Standard CSS only</p>
-  <p>Easy to learn</p>
-  <p>No need for jQuery</p>
-  <p>No JavaScript library</p>
-  </div>
-</div>
-
-<div class="w3-third">
-  <div class="w3-card w3-container" style="min-height:460px">
-  <h3>Design</h3><br>
-  <i class="fa fa-diamond w3-margin-bottom w3-text-theme" style="font-size:120px"></i>
-  <p>Paper like design</p>
-  <p>Bold colors and shadows</p>
-  <p>Equal across platforms</p>
-  <p>Equal across devices</p>
-  </div>
-</div>
-</div>
+{%endfor%}
 
 <div class="w3-container">
 <hr>
@@ -291,9 +221,9 @@
 {% for item in tests%}
 <div class="w3-third">
 <div class="w3-card">
-    <img src="/mediafiles/{{item.rasm}}" style="width: 10%;" alt="Test rasmi">
+    <img src="/mediafiles/{{item.rasm}}" style="width: 20%;" alt="Test rasmi">
   <div class="w3-container">
-  <p>w3-card</p>
+  <p>{{item.savol}}</p>
   </div>
 </div>
 </div>
@@ -413,7 +343,7 @@
 </div>
 <hr>
 {%for item in tests%}
-<h2 class="w3-center">Slideshows</h2>
+<h2 class="w3-center">Men qilgan ishlar</h2>
 <div class="w3-content" style="max-width:800px;position:relative">
     <img src="/mediafiles/{{item.rasm}}" style="width: 100%;" alt="Test rasmi">
 {%endfor%}
@@ -551,13 +481,13 @@
 <!-- Footer -->
 <footer class="w3-container w3-theme-dark w3-padding-16">
   <h3>Footer</h3>
-  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+  <p>Tuzuvchi <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">Sukhrob Allamurodov</a></p>
   <div style="position:relative;bottom:55px;" class="w3-tooltip w3-right">
     <span class="w3-text w3-theme-light w3-padding">Go To Top</span>    
     <a class="w3-text-white" href="#myHeader"><span class="w3-xlarge">
     <i class="fa fa-chevron-circle-up"></i></span></a>
   </div>
-  <p>Remember to check out our  <a href="w3css_references.asp" class="w3-btn w3-theme-light" target="_blank">W3.CSS Reference</a></p>
+  <p>Remember to check out our  <a href="w3css_references.asp" class="w3-btn w3-theme-light" target="_blank">Sukhrob Allamurodov Reference</a></p>
 </footer>
 
 <!-- Script for Sidebar, Tabs, Accordions, Progress bars and slideshows -->
